--- a/style1.css
+++ b/style1.css
@@ -1,3 +1,152 @@
+.product-page{
+display: grid;
+grid-template-columns: 300px 960px ;}
+.sidebar{
+    width: 300px; ;
+    height: 1304px; ;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    position: relative;
+}
+h1{
+   font-size: 18px;
+
+}
+p{
+    font-size: 14px;
+    line-height: 19px;
+
+}
+a{
+    text-align:end;
+}
+.price-input{
+    width: 100%;
+    display: flex;
+    margin: 30px 0 35px;
+}
+.price-input .field{
+    height: 45px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+}
+.field input{
+    width: 100%;
+    height: 100%;
+    margin-left: 12px;
+    border: 1px solid #999;
+    outline: none;
+    border-radius: 15px;
+    text-align: center;
+    font-size: 14px;
+    -moz-appearance: none;
+}
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button{
+    -webkit-appearance: none;
+}
+.price-input .separator{
+   width: 130px;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+  font-size: 14px;
+}
+.slider{
+    width: 251px;
+    height: 6px;
+    top: 1000px;
+    border-radius: 12px;
+    background-color:#EBEBEB;
+    position: absolute;
+}
+.slider .progress{
+    height: 6px;
+    background-color: #b700ff;
+    border-radius: 12px;
+    position: absolute;
+    left: 50px;
+    right: 50px;
+}
+.range-input{
+    position: relative;
+}
+.range-input input{
+    position: absolute;
+    top: -5px;
+    height: 5px;
+    width: 100%;
+    pointer-events: none;
+    -webkit-appearance: none;
+    background: none;
+}
+input[type="range"]::-webkit-slider-thumb{
+    height: 20px;
+    width: 20px;
+    -webkit-appearance: none;
+    border-radius: 50%;
+    border: 1px solid #D1D1D1;
+    background-color: #FFFFFF;
+    pointer-events: auto;
+}
+input[type="range"]::-moz-range-thumb{
+    height: 20px;
+    width: 20px;
+    -moz-appearance: none;
+    border-radius: 50%;
+    background-color: #ff0000 ;
+    pointer-events: auto;
+    border: none;
+}
+.products {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    row-gap: 50px;
+}
+.product-example {
+    position: relative;
+    padding: 16px;
+    width: 238px;
+    height: 332px;
+    border: solid 1px;
+    border-radius: 12px;
+}
+.product-example h1 {
+    font-size: 23px;
+}
+.product-example p { 
+    font-size: 12px;
+}
+.product-example h2 { 
+    font-size: 18px;
+}
+.product-example h3 { 
+    font-size: 12px;
+}
+.buy-now {
+    position: absolute;
+    right: 16px;
+    bottom: 16px;
+    width: 90px;
+    height: 36px;
+    font-size: 15px;
+    border-radius: 12px;
+    border: 1px solid green;
+    background-color: lightgreen;
+    transition-duration: 0.5s;
+}
+.buy-now:hover {
+       background-color: green;
+       color: lightgreen; 
+    }
+
+.navigation{
+display: flex;
+justify-content: space-between;
+}
 .info{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -5,13 +154,15 @@
 ul{
     list-style: none;
     padding: 0%;
+    font-size: 18px;
 }
 .info h1{
-    font-size:18px ;
+    font-size:18px;
 }
 a:link{
     color:#6A983C ;
     text-decoration: none;
+    font-size: 14px;
 }
 button{
       background-color: #f5f5f5;
@@ -22,4 +173,5 @@ button{
       margin-right: 10px;
       font-family: cursive;
       font-weight: bold;
+      font-size: 14px;
     }
