--- a/style.css
+++ b/style.css
@@ -4,12 +4,12 @@
     align-items: center;
     font-size: 18px;
     padding: 0px 80px;
-    width: 1260px;
+    max-width: 1260px;
     height: 130px;
 }
 .links-bar {
     background-color: #F9F9F9;
-    width: 1260px;
+    max-width: 1260px;
     height: 45px;
     font-size: 15px;
     display: flex;
@@ -23,9 +23,25 @@
     display: flex;
     justify-content: space-between;
     padding: 64px 45px;
-    width: 1260px;
+    max-width: 1260px;
     height: 280px;
 }
+.category-sidebar{
+    display: grid;
+    grid-template-rows: 55px 180px 100px;
+}
+.category-button{
+    grid-row-start: 3;
+    width: 234px;
+    height: 48px;
+    background-color: #F5F5F5;
+    border-radius: 10px;
+    border-style: none;
+    transition-duration: 0.5s;
+}
+.category-button:hover {
+    background-color: lightslategray;
+    }
 .category h1{
     font-size: 27px;
 }   
@@ -37,7 +53,7 @@
     font-style: none;
     font-size: 19px ;
     }
-.more { 
+.banner-more { 
     width: 234px;
     height: 48px;
     background-color: #F5F5F5;
@@ -45,21 +61,15 @@
     border-style: none;
     transition-duration: 0.5s;
 }
-.category .more{
-    position: absolute;
-    bottom: 59px;
-}
-.more:hover {
-background-color: lightslategray;
-}
 .banner1 {
-    position: relative;
     background-color:#F4F8EC;
     border-radius: 12px;
     padding: 12px;
     width: 420px;
     height: 280px;
     padding-left: 33px;
+    display: grid;
+    grid-template-rows: 25px 195px 60px;
 }
 .banner1 h1{
     font-size: 12px;
@@ -68,13 +78,14 @@ background-color: lightslategray;
     font-size: 22px;
 }
 .banner2 {
-    position: relative;
     background-color:#F4F8EC;
     border-radius: 12px;
     padding: 12px;
     width: 420px;
     height: 280px;
     padding-left: 33px;
+    display: grid;
+    grid-template-rows: 25px 195px 60px;
 }
 .banner2 h1{
     font-size: 12px;
@@ -95,14 +106,7 @@ a:hover{
 a:active{
     text-decoration: none;
 }
-.banner1 .banner-button {
-    position: absolute;
-    bottom: 25px;
-}
-.banner2 .banner-button {
-    position: absolute; 
-    bottom: 25px;
-}
+
 .banner-button{
     background-color: lightgreen;
     border-radius: 12px;
@@ -116,13 +120,16 @@ a:active{
        background-color: green;
        color: lightgreen;
    }
-   .best-seller{
+.best-seller{
     display: flex;
     justify-content: space-between;
-    position: relative;
     padding: 64px 45px;
-    width: 1260px;
+    max-width: 1260px;
     height: 345px;
+}
+.best-seller-sidebar {
+    display:grid;
+    grid-template-rows: 55px 200px 90px;
 }
 .best-seller h1{
     font-size: 27px;
@@ -136,16 +143,13 @@ a:active{
     font-size: 19px ;
     }
 .more-products { 
+    grid-row-start: 3;
     width: 234px;
     height: 48px;
     background-color: #F5F5F5;
     border-radius: 10px;
     border-style: none;
     transition-duration: 0.5s;
-}
-.best-seller .more-products{
-    position: absolute;
-    bottom: 59px;
 }
 .more-products:hover {
 background-color: lightslategray;
@@ -211,10 +215,11 @@ img {
     width: 90px;
     height: 36px;
 }
-.buy-now:hover {
+.buybutton:hover {
        background-color: green;
-       color: lightgreen; 
+       color: white; 
     }
+    
 .reviews {
     display:grid;
     grid-template-columns:630px 630px;
@@ -246,25 +251,35 @@ img {
 .slide {
         height: 198px;
         width: 369px;
-        background: gray;
-        color: white;
+        border-radius: 12px;
+        background: white;
+        color: black;
         display: flex;
+        flex-direction: column;
         align-items: center;
-        justify-content: center;
+        justify-content:space-around;
         border: 1px solid #F1F1F1;
         flex-shrink: 0;
     }
-
+.quote {
+    font-size: 15px;
+    font-weight: 500;
+}
+.reviewers-name{
+    font-size: 12px;
+    font-weight: 600;
+    color: #A9A9A9;
+}
 .slide.active {
-        background: tomato;
+        background: rgb(219, 252, 209);
     }
 .controls {
-    position:relative       ;
+    position:relative;
     z-index: 2;
     background: none;
     border: none;
     font-size:48;
-    top: -123px;
+    top: calc(-50% + 24px);
     display: flex;
     justify-content: space-between;
     }
@@ -309,7 +324,8 @@ img {
     justify-content: end;
     align-items: center;
 }
-.more-button{background-color: white;
+.more-button{
+    background-color: white;
     border: none;
     font-size: 15px;
     font-weight: 700;
@@ -317,6 +333,7 @@ img {
 
 }
 .product-line {
+    max-width: 1260px;
     grid-column-start: 1;
     grid-column-end: 5;
     display: flex;
