--- a/style1.css
+++ b/style1.css
@@ -1,14 +1,119 @@
+
+.body{
+padding-left: 45px;
+}
+                                                                        /*head*/
+.header{
+    display: grid;
+    grid-template-columns: 1210px 50px;
+    grid-template-rows: 130px 55px;
+}
+.web-name{
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 1;
+    font-size: 25px;
+
+    padding-top: 56px;
+    padding-bottom: 56px;
+    font-family: cursive;
+}
+.cart-icon{
+    grid-column-start: 2;
+    grid-row-end: 2;
+    padding-right: 50px;
+    padding-top: 60px;
+    padding-bottom: 60px;
+}
+.nav-bar{
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 2;
+    display: flex;
+    flex-direction: row;
+    gap: 40px;
+    font-size: 15px;
+
+    padding-top: 16px;
+    padding-bottom: 16px;
+}
+.page-header{
+    display: grid;
+    grid-template-columns:145px 1000px 53px 62px ;
+    grid-template-rows: 48px 64px 50px;
+}
+.directory{
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-end: 2;
+    font-size: 12px;
+
+    padding-top: 15.5px;
+    padding-bottom: 15.5px;
+}
+.page-name{
+    grid-column-start: 1;
+    grid-column-end:3 ;
+    grid-row-start: 2;
+    font-size: 32px;
+    font-weight: 600;
+    font-family: cursive;
+
+    padding-bottom: 8px;
+    padding-top: 8px;
+}
+.product-amount{
+    grid-column-start: 3;
+    grid-row-start: 2;
+}
+.product-contained{
+    grid-column-start: 4;
+    grid-row-start: 2;
+}
+.Applied-filters{
+    grid-column-start: 1;
+    grid-row-start: 3;
+    font-size: 12px;
+
+    padding-top: 16px;
+    padding-bottom: 16px;
+    gap: 12px;
+    color:#A9A9A9 ;
+    font-family: cursive;
+}
+.selected-filters{
+    grid-column-start: 2;
+    grid-column-end: 5;
+    grid-row-start: 3;
+    font-size: 12px;
+}
+
+
 .product-page{
 display: grid;
 grid-template-columns: 300px 960px ;}
+
+                                                                            /* side bar */
 .sidebar{
     width: 300px; ;
     height: 1304px; ;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    position: relative;
 }
+
+
+
+
+.Rating{
+    font-size: 13px;
+  
+}
+
+
+
+
+
 h1{
    font-size: 18px;
 
@@ -24,19 +129,18 @@ a{
 .price-input{
     width: 100%;
     display: flex;
-    margin: 30px 0 35px;
+    margin-top: 30px;
 }
 .price-input .field{
     height: 45px;
     width: 100%;
-    display: flex;
     align-items: center;
+    font-family: cursive;
 }
 .field input{
     width: 100%;
     height: 100%;
-    margin-left: 12px;
-    border: 1px solid #999;
+    border: 1px solid#D1D1D1;
     outline: none;
     border-radius: 15px;
     text-align: center;
@@ -48,7 +152,8 @@ input[type="number"]::-webkit-inner-spin-button{
     -webkit-appearance: none;
 }
 .price-input .separator{
-   width: 130px;
+    height: 100px;
+    width: 100px;
    display: flex;
    align-items: center;
    justify-content: center;
@@ -56,17 +161,14 @@ input[type="number"]::-webkit-inner-spin-button{
 }
 .slider{
     width: 251px;
-    height: 6px;
-    top: 1000px;
     border-radius: 12px;
-    background-color:#EBEBEB;
-    position: absolute;
+    background-color:white
+
 }
 .slider .progress{
-    height: 6px;
-    background-color: #b700ff;
+    height: 5px;
+    background-color:#19b94f;
     border-radius: 12px;
-    position: absolute;
     left: 50px;
     right: 50px;
 }
@@ -74,17 +176,17 @@ input[type="number"]::-webkit-inner-spin-button{
     position: relative;
 }
 .range-input input{
-    position: absolute;
     top: -5px;
     height: 5px;
     width: 100%;
     pointer-events: none;
     -webkit-appearance: none;
     background: none;
+    position: absolute;
 }
 input[type="range"]::-webkit-slider-thumb{
-    height: 20px;
     width: 20px;
+    height: 20px;
     -webkit-appearance: none;
     border-radius: 50%;
     border: 1px solid #D1D1D1;
@@ -100,61 +202,102 @@ input[type="range"]::-moz-range-thumb{
     pointer-events: auto;
     border: none;
 }
+.slider button{
+    background-color:#6A983C;
+    border: 2px solid #46760A;
+    border-radius: 12px;
+    width: 78px;
+    height: 48px;
+    color: white;
+}
+                                                                            /*9 pictures*/
 .products {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
     row-gap: 50px;
 }
-.product-example {
-    position: relative;
-    padding: 16px;
-    width: 238px;
-    height: 332px;
-    border: solid 1px;
+
+.product {
+    border: 1px solid black;
+    height: 323px;
+    max-width: 270px;
+    border-radius: 12px;
+    display:grid;
+    grid-template-columns: 135px 135px;
+    grid-template-rows: 212px 30px 26px 20px 23px;
+}
+img {
     border-radius: 12px;
 }
-.product-example h1 {
-    font-size: 23px;
+.picture {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    display:flex;
+    justify-content: center;
+    padding: 16px;
+    border-radius: 12px;
 }
-.product-example p { 
+.product-name {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    font-size: 15px;
+    font-weight: bold;
+    padding-left: 16px;
+}
+.product-description {
+    grid-column-start: 1;
+    grid-column-end: 3;
     font-size: 12px;
+    padding-left: 16px;
 }
-.product-example h2 { 
+.price {
+    grid-column-start: 1;
     font-size: 18px;
+    padding-left: 16px;
+    font-weight: bolder;
 }
-.product-example h3 { 
+.old-price {
+    grid-column-start: 1;
     font-size: 12px;
+    padding-left: 16px;
 }
 .buy-now {
-    position: absolute;
-    right: 16px;
-    bottom: 16px;
+        grid-column-start: 2;
+    grid-row-start: 4;
+    grid-row-end:6;
+    display:flex;
+    justify-content: right;
+    padding-right: 16px;
+}
+.buybutton {
+    font-size: 15px;
+    color: white;
+    border-radius: 12px;
+    background-color:#6A983C ;
+    border: 1px solid green;
     width: 90px;
     height: 36px;
-    font-size: 15px;
-    border-radius: 12px;
-    border: 1px solid green;
-    background-color: lightgreen;
-    transition-duration: 0.5s;
 }
-.buy-now:hover {
-       background-color: green;
-       color: lightgreen; 
-    }
-
+.buybutton:hover{
+    background-color: aqua;
+    color: white;
+}
 .navigation{
 display: flex;
 justify-content: space-between;
+max-width: 1260px;
+
 }
 .info{
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 315px 315px 315px 315px;
 }
 ul{
     list-style: none;
     padding: 0%;
     font-size: 18px;
+    
 }
 .info h1{
     font-size:18px;
@@ -175,3 +318,8 @@ button{
       font-weight: bold;
       font-size: 14px;
     }
+.product-tags{
+    font-size: 18px;
+    font-weight: 600px;
+    font-family: cursive;
+}
