--- a/style.css
+++ b/style.css
@@ -3,52 +3,64 @@ body{
     flex-direction: column;
     align-items: center;}
 .header{
-    display: grid;
-    grid-template-columns: 1210px 50px;
-    grid-template-rows: 130px 55px;
-    padding-left: 45px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    max-width: 1260px;
+    height: 130px;
 }
 .web-name{
     grid-column-start: 1;
     grid-column-end: 2;
     grid-row-start: 1;
     font-size: 25px;
-    padding-top: 56px;
-    padding-bottom: 56px;
     font-family: cursive;
+    display: flex;
+    align-items: center;
 }
 .cart-icon{
     grid-column-start: 2;
     grid-row-end: 2;
-    padding-right: 50px;
-    padding-top: 60px;
-    padding-bottom: 60px;
+    display: flex;
+    align-items: center;
 }
 .nav-bar{
-    grid-column-start: 1;
-    grid-column-end: 3;
-    grid-row-start: 2;
-    display: flex;
-    flex-direction: row;
+    display:flex;
     gap: 40px;
+    width: 100%;
+    max-width: 1260px;
+    padding: 15px 45px ;
     font-size: 15px;
-    padding-left: 16px;
-    padding-top: 16px;
-    padding-bottom: 16px;
     background-color: #F9F9F9;
 }
-
+.link{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+@media only screen and (min-width: 768px) {
 .category {
-    position: relative;
     display: flex;
     justify-content: space-between;
     padding: 64px 45px;
     max-width: 1260px;
     height: 280px;
-}
+}}
+@media only screen and (max-width: 768px) {
+    .category {
+        display: flex;
+        flex-direction: column;
+        align-items: center;s
+        justify-content: center;
+        padding: 64px 45px;
+        gap: 32px;
+        height: auto;
+    }}
 .category-sidebar{
     display: grid;
-    grid-template-rows: 55px 180px 100px;
+    grid-template-rows: 1fr 4fr 2fr;
 }
 .category-button{
     grid-row-start: 3;
@@ -85,11 +97,12 @@ body{
     background-color:#F4F8EC;
     border-radius: 12px;
     padding: 12px;
-    width: 420px;
-    height: 280px;
+    width: 100%;
+    max-width: 420px;
+    max-height: 280px;
     padding-left: 33px;
     display: grid;
-    grid-template-rows: 25px 195px 60px;
+    grid-template-rows: 1fr 8fr 2fr;
 }
 .banner1 h1{
     font-size: 12px;
@@ -101,7 +114,8 @@ body{
     background-color:#F4F8EC;
     border-radius: 12px;
     padding: 12px;
-    width: 420px;
+    width: 100%;
+    max-width: 420px;
     height: 280px;
     padding-left: 33px;
     display: grid;
@@ -140,16 +154,29 @@ a:active{
        background-color: green;
        color: lightgreen;
    }
+@media only screen and (min-width: 768px){   
 .best-seller{
     display: flex;
     justify-content: space-between;
     padding: 64px 45px;
     max-width: 1260px;
     height: 345px;
-}
+}}
+@media only screen and (max-width: 768px){   
+    .best-seller{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        justify-content: center;
+        padding: 64px 45px;
+        max-width: 1260px;
+        gap: 40px;
+        height: auto;
+    }}
 .best-seller-sidebar {
     display:grid;
-    grid-template-rows: 55px 200px 90px;
+    grid-template-rows: 1fr 4fr 2fr;
 }
 .best-seller h1{
     font-size: 27px;
@@ -164,7 +191,8 @@ a:active{
     }
 .more-products { 
     grid-row-start: 3;
-    width: 234px;
+    width: 100%;
+    max-width: 234px;
     height: 48px;
     background-color: #F5F5F5;
     border-radius: 10px;
@@ -242,7 +270,7 @@ img {
     
 .reviews {
     display:grid;
-    grid-template-columns:630px 630px;
+    grid-template-columns:1fr 1fr;
     grid-template-rows: 134px 291px;
     padding-left: 45px;
 }
@@ -320,22 +348,32 @@ img {
     font-weight: 900;
 
 }
+@media only screen (min-width:768px){
 .products-section {
     display:grid;
-    grid-template-columns: 315px 315px 315px 315px;
-    grid-template-rows: 134px 396px;
-    height: 530px;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 3fr;
+    max-height: 530px;
     max-width: 1260px;
-
-}
+}}
+@media only screen (max-width:768px){
+    .products-section {
+        display:grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-template-rows: 1fr 3fr;
+        max-height: auto;
+        max-width: 1260px;
+    }}
 .products-header {
     grid-column-start: 1;
-    grid-column-end: 4;
+    grid-column-end: 5;
     font-size: 27px;
     padding-left: 64px;
     font-weight: 600;
     display:flex;
-    align-items: center;
+    width: 100%;
+    max-width: 1260px;
+    justify-content: space-between;
 }
 .more-products-button{
     grid-column-start: 4;
@@ -351,56 +389,82 @@ img {
     font-weight: 700;
     color: #6A983C;
 }
-.product-line {
-    max-width: 1260px;
-    grid-column-start: 1;
-    grid-column-end: 5;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    gap: 32px;
-    padding-left: 64px;
-    padding-right: 64px;
-}
-.info{
-    display: grid;
-    grid-template-columns: 315px 315px 315px 315px;
-    grid-template-rows: 200px 30px 50px;
-    padding-left: 45px;
-}
-ul{
-    list-style: none;
-    padding: 0%;
-    font-size: 18px;
-    
-}
-.info h1{
-    font-size:18px;
-}
-a:link{
-    color:#6A983C ;
-    text-decoration: none;
-    font-size: 14px;
-}
-.product-tags{
-    grid-column-start: 1;
-    font-size: 18px;
-    font-weight: 600px;
-    font-family: cursive;
-}
-.button-tags {
-    grid-column-start: 1;
-    grid-column-end: 5;
-    grid-row-start: 3;
-}
-button{
-      background-color: #f5f5f5;
-      border-style: none;
-      height: 25px;
-      border-radius: 100px;
-      margin-block: 10px;
-      margin-right: 10px;
-      font-family: cursive;
-      font-weight: bold;
-      font-size: 14px;
-    }
+@media only screen and (min-width: 768px){   
+    .product-line{
+        max-width: 1260px;
+        grid-column-start: 1;
+        grid-column-end: 5;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        gap: 32px;
+        padding-left: 64px;
+        padding-right: 64px;
+    }}
+    @media only screen and (max-width: 768px){   
+        .product-line{
+            max-width: 1260px;
+            grid-column-start: 1;
+            grid-column-end: 5;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            gap: 32px;
+            height: auto;
+        }}
+        @media only screen and (min-width: 768px){ 
+            .footer{
+                display:grid;
+                padding-top: 20px;
+                grid-template-columns: 1fr 1fr 1fr 1fr ;
+                grid-template-rows: 160px 30px 40px;
+                width: 100%;
+                max-width: 1260px;
+            }}
+            @media only screen and (max-width: 768px){ 
+            .footer{
+                display:flex;
+                padding-top: 20px;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                width: 100%;
+                max-width: 1260px;
+            }}
+            .footer-title{
+                font-size: 18px;
+                font-weight: 600;
+            }
+            .footer-tags{ 
+                font-size: 18px;
+                font-weight: 600;
+                grid-column-start: 1;
+                grid-column-end: 3;
+            }
+            .button-tags {
+                grid-column-start: 1;
+                grid-column-end: 5;
+            }
+            .button-tags button{
+                  background-color: #f5f5f5;
+                  border-style: none;
+                  height: 25px;
+                  border-radius: 12px;
+                  margin-right: 10px;
+                  font-family: cursive;
+                  font-weight: bold;
+                  font-size: 12px;
+                }
+            ul{
+                list-style-type: none;
+                margin-top: 15px;
+                padding: 0;
+                line-height: 19px;
+                font-weight: 400;
+                font-size: 14px;
+            }
+            a{  
+                text-decoration: none;
+                color: #6A983C;
+            }
