--- a/style1.css
+++ b/style1.css
@@ -1,46 +1,48 @@
 
 .body{
-padding-left: 45px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
-                                                                        /*head*/
 .header{
-    display: grid;
-    grid-template-columns: 1210px 50px;
-    grid-template-rows: 130px 55px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    max-width: 1260px;
+    height: 130px;
 }
 .web-name{
     grid-column-start: 1;
     grid-column-end: 2;
     grid-row-start: 1;
     font-size: 25px;
-
-    padding-top: 56px;
-    padding-bottom: 56px;
     font-family: cursive;
+    display: flex;
+    align-items: center;
 }
 .cart-icon{
     grid-column-start: 2;
     grid-row-end: 2;
-    padding-right: 50px;
-    padding-top: 60px;
-    padding-bottom: 60px;
+    display: flex;
+    align-items: center;
 }
 .nav-bar{
-    grid-column-start: 1;
-    grid-column-end: 3;
-    grid-row-start: 2;
+    display:flex;
+    gap: 40px;
+    width: 100%;
+    max-width: 1260px;
+    padding: 15px 45px ;
+    font-size: 15px;
+    background-color: #F9F9F9;
+}
+
+.link{
     display: flex;
     flex-direction: row;
-    gap: 40px;
-    font-size: 15px;
-
-    padding-top: 16px;
-    padding-bottom: 16px;
-}
-.page-header{
-    display: grid;
-    grid-template-columns:145px 1000px 53px 62px ;
-    grid-template-rows: 48px 64px 50px;
+    justify-content: center;
+    align-items: center;
 }
 .directory{
     grid-column-start: 1;
@@ -50,6 +52,13 @@ padding-left: 45px;
 
     padding-top: 15.5px;
     padding-bottom: 15.5px;
+}
+.page-header{
+ display: grid;
+ grid-template-columns: 3fr 20fr 2fr 2fr;
+ grid-template-rows: 1fr 1fr 1fr;
+ width: 100%;
+ max-width: 1260px;
 }
 .page-name{
     grid-column-start: 1;
@@ -89,9 +98,15 @@ padding-left: 45px;
 }
 
 
-.product-page{
+@media only screen and (min-width: 768px){
+    .product-page{
 display: grid;
-grid-template-columns: 300px 960px ;}
+grid-template-columns:1fr 3fr;}}
+@media only screen and (max-width: 768px){
+    .product-page{
+display: flex;
+flex-direction: column;
+}}
 
                                                                             /* side bar */
 .sidebar{
@@ -211,13 +226,23 @@ input[type="range"]::-moz-range-thumb{
     color: white;
 }
                                                                             /*9 pictures*/
-.products {
+ @media only screen and (min-width: 768px){
+.productcontainer {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
     row-gap: 50px;
 }
-
+ }
+ @media only screen and (max-width: 768px){
+    .productcontainer {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 30px;
+    }
+     }
 .product {
     border: 1px solid black;
     height: 323px;
@@ -287,25 +312,7 @@ img {
 display: flex;
 justify-content: space-between;
 max-width: 1260px;
-
-}
-.info{
-    display: grid;
-    grid-template-columns: 315px 315px 315px 315px;
-}
-ul{
-    list-style: none;
-    padding: 0%;
-    font-size: 18px;
-    
-}
-.info h1{
-    font-size:18px;
-}
-a:link{
-    color:#6A983C ;
-    text-decoration: none;
-    font-size: 14px;
+width: 100%;
 }
 button{
       background-color: #f5f5f5;
@@ -318,8 +325,59 @@ button{
       font-weight: bold;
       font-size: 14px;
     }
-.product-tags{
-    font-size: 18px;
-    font-weight: 600px;
-    font-family: cursive;
-}
+
+@media only screen and (min-width: 768px){ 
+    .footer{
+        display:grid;
+        padding-top: 20px;
+        grid-template-columns: 1fr 1fr 1fr 1fr ;
+        grid-template-rows: 160px 30px 40px;
+        width: 100%;
+        max-width: 1260px;
+    }}
+    @media only screen and (max-width: 768px){ 
+    .footer{
+        display:flex;
+        padding-top: 20px;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        max-width: 1260px;
+    }}
+    .footer-title{
+        font-size: 18px;
+        font-weight: 600;
+    }
+    .footer-tags{ 
+        font-size: 18px;
+        font-weight: 600;
+        grid-column-start: 1;
+        grid-column-end: 3;
+    }
+    .button-tags {
+        grid-column-start: 1;
+        grid-column-end: 5;
+    }
+    .button-tags button{
+          background-color: #f5f5f5;
+          border-style: none;
+          height: 25px;
+          border-radius: 12px;
+          margin-right: 10px;
+          font-family: cursive;
+          font-weight: bold;
+          font-size: 12px;
+        }
+    ul{
+        list-style-type: none;
+        margin-top: 15px;
+        padding: 0;
+        line-height: 19px;
+        font-weight: 400;
+        font-size: 14px;
+    }
+    a{  
+        text-decoration: none;
+        color: #6A983C;
+    }
